CSS 2.1 failure: 'Text-indent' only affects a line if it is the first formatted line of an element https://bugs.webkit.org/show_bug.cgi?id=63185

Reviewed by Eric Seidel.

Source/WebCore:

Per CSS 2.1 (http://www.w3.org/TR/CSS21/text.html) : "'Text-indent' only affects a line if it is the
first formatted line of an element. For example, the first line of an anonymous block box is only
affected if it is the first child of its parent element."

Tests: fast/css/text-indent-first-line-001.html
       fast/css/text-indent-first-line-002.html
       fast/css/text-indent-first-line-003.html
       fast/css/text-indent-first-line-004.html
       fast/css/text-indent-first-line-005.html
       fast/css/text-indent-first-line-006.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::computeInlineDirectionPositionsForLine): As well as being the first line under a parent block,
  check that this is also the first *formatted* line of an element by ensuring that we are at the start of a
  formatting context and not just a continuation of a previous anonymous block in an existing formatting context.

LayoutTests:

* css2.1/20110323/text-indent-014-expected.html: Added.
* css2.1/20110323/text-indent-014.htm: Added.
* fast/css/text-indent-first-line-001-expected.html: Added.
* fast/css/text-indent-first-line-001.html: Added.
* fast/css/text-indent-first-line-002-expected.html: Added.
* fast/css/text-indent-first-line-002.html: Added.
* fast/css/text-indent-first-line-003-expected.html: Added.
* fast/css/text-indent-first-line-003.html: Added.
* fast/css/text-indent-first-line-004-expected.html: Added.
* fast/css/text-indent-first-line-004.html: Added.
* fast/css/text-indent-first-line-005-expected.html: Added.
* fast/css/text-indent-first-line-005.html: Added.
  Text-indent in the span here is inherited from the div. CSS 2.1: "Since the 'text-indent'
  property inherits, when specified on a block element, it will affect descendant
  inline-block elements."
* fast/css/text-indent-first-line-006-expected.html: Added.
* fast/css/text-indent-first-line-006.html: Added.


Canonical link: https://commits.webkit.org/111491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125202 268f45cc-cd09-0410-ab3c-d52691b4dbfc